# ipi.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml
ipi/: __main__.py  pipelines.py  registries.py  resolver.py  settings.py
ipi/bootstrap/: itself.py  packaging.py  tiers.py  utils.py
ipi/cli/: argparse.py  plumbum.py
ipi/defaultPetnames/: KOLANICH.tsv  __init__.py  crypto.tsv  git.tsv  hatchling.tsv  http.tsv  misc.tsv  native.tsv  pep517.tsv  popular_utils.tsv  setuptools.tsv  toolkit.tsv  trampolim.tsv  whey.tsv
ipi/repos/: __init__.py
ipi/repos/tuf/: Repo.py  RepoBuilder.py  RepoManager.py  __init__.py
ipi/scanCodeHosting/: GitHub.py  __init__.py
ipi/tools/: distlib.py  install.py  pip.py  python.py  setup_py.py
ipi/utils/: CLICookie.py  WithInBandBorders.py  WithPythonPath.py  __init__.py  json.py  metadataExtractor.py  pythonBuild.py  repoURINormalizer.py  styles.py  uriDetector.py
tests/: createTestEnv.sh  tests.py
